# cocktail-app

./: .gitignore  README.md  app.py  forms.py  init.sql  performance_testing_report.md  pylint_report.md  pyproject.toml  recipes.json  recipes.py  requirements.txt  reviews.py  schema.sql  seed.py  seed_reviews.json  tags.py  users.py
src/: app.py  db.py  recipes.py  reviews.py  seed.py  seed_perf_testing.py  tags.py  users.py
src/recipe/: model.py  queries.py
src/static/: main.css
src/templates/: index.html  login.html  new_recipe.html  not_found.html  recipe_details.html  recipe_edit.html  recipe_new.html  recipe_update.html  recipes.html  register.html  review_new.html  review_update.html  user_details.html
src/templates/layouts/: base.html
src/templates/macros/: recipe_form.html  review_form.html
src/user/: model.py  queries.py
static/: main.css
templates/: index.html  login.html  recipe_details.html  recipe_new.html  recipe_update.html  recipes.html  review_new.html  review_update.html  user_details.html
templates/layouts/: base.html
templates/macros/: recipe_details.html  recipe_form.html  review_form.html
