[tool.poetry]
name = "cocktail-app"
version = "0.1.0"
description = "A course project for University of Helsinki"
authors = ["Aleksi Romppainen <aromppa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "~3.10"
flask = "^3.1.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
